try to fix flickering on mobile caused by opacity

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     background-color: rgb(230, 230, 230);
     box-shadow: 0px 1px 20px rgb(44, 44, 44);
     opacity: .9;
+    transform:translate3d(0,0,0);
 }
 
 .header p{
@@ -135,6 +136,7 @@ body {
         border-width: 0 0 1px 1px;
         border-radius: 0 0 0 10px;
         font-size: 40px;
+        transform:translate3d(0,0,0);
     }
 
     
